--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.0",
     "@types/video.js": "^7.3.17",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "antd": "^4.15.6",
     "electron": "^12.0.9",
+    "eslint": "^7.27.0",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "plyr": "^3.6.8",
@@ -36,7 +39,8 @@
     "start:prod": "NODE_ENV=production electron ./build/main.js",
     "build": "rimraf build && run-s react:build electron:build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .ts"
   },
   "eslintConfig": {
     "extends": [
