--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "rimraf": "^3.0.2",
+    "rxjs": "^7.1.0",
     "typescript": "^4.1.2",
     "video.js": "^7.11.8",
     "web-vitals": "^1.0.1"
